// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary with 1 expenses 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    $94.00
     
  </h1>
</div>
`;

exports[`should render expenses summary with 2 expenses 1`] = `
<div>
  <h1>
     Viewing 
    2
     
    expenses
     totalling 
    $94.00
     
  </h1>
</div>
`;
